--- a/help/templates/help/showpostlist.html
+++ b/help/templates/help/showpostlist.html
@@ -16,6 +16,9 @@
             <h1>체리야 도와줘</h1>
             <div class="wrap articles">
             {% for e in post_list %}
+            <!-- post_list안에 있는 요소들을 e에 담아주고 for문으로 하나씩 뽑아서 하나씩 나열한다.
+            글번호 - 제목 - 작성자 - 작성시간 -->
+            <!--  여기랑 연결되어 있는 정보를 확인하려면 url에 가서 post_list로 찾아 간다.  -->
             <article>
                 <a class="article" href="{% url 'help:showpostdetail' post_seq=e.0 %}" style="text-decoration : none;">
                    <h2 class="medium">{{e.1}}</h2>
@@ -23,7 +26,7 @@
                    <time class="small">{{e.3}}</time>
                    <h3 class="small">{{e.4}}</h3>
                     <ul class="status">
-                         <li title="조회수" class="comment">{{e.5}}</li>
+                        <li title="조회수" class="comment">{{e.5}}</li>
                     </ul>
                     <hr>
                 </a>
