--- a/mypage/templates/mypage/mypost.html
+++ b/mypage/templates/mypage/mypost.html
@@ -12,10 +12,10 @@
             }
         </style>
             <a href="{% url 'mypage:myinfo' %}">내정보</a>
-            <a href="{% url 'mypage:mypost' %}">내가쓴글/댓글</a>
+            <a href="{% url 'mypage:my_post' %}">내가쓴글/댓글</a>
             <h1 >My Post</h1>
-            <a href="{% url 'mypage:mypost' %}">내가쓴 글</a>
-            <a href="{% url 'mypage:myreply' %}">내가쓴 댓글</a>
+            <a href="{% url 'mypage:my_post' %}">내가쓴 글</a>
+            <a href="{% url 'mypage:my_reply' %}">내가쓴 댓글</a>
     </head>
 <body>
                 <form method="post" action=""> <!-- action을 비워두면 자기 자신한테 간다.-->
@@ -37,11 +37,7 @@
                             <tr>
                                 <td>{{hang.0}}</td>
                                 <td>{{hang.1}}</td>
-                                {% if hang.0 == '공지사항' %}
-                                <td><a href="{% url 'notice:showpostdetail' post_seq=hang.1%}">{{hang.2}}</a></td>
-                                {% else %}
-                                <td><a href="{% url 'help:showpostdetail' post_seq=hang.1%}">{{hang.2}}</a></td>
-                                {% endif %}
+                                <td><a href="{% url 'post:show_post_detail' post_seq=hang.1%}">{{hang.2}}</a></td>
                                 <td>{{hang.3}}</td>
                                 <td>{{hang.4}}</td>
                             </tr>
