--- a/mypage/templates/mypage/myinfo.html
+++ b/mypage/templates/mypage/myinfo.html
@@ -14,7 +14,7 @@
         <div class="myinfo">
             {% include 'navi.html' %}
             <a href="{% url 'mypage:myinfo' %}">개인 정보</a>
-            <a href="{% url 'mypage:mypost' %}">내가 쓴 글/댓글</a>
+            <a href="{% url 'mypage:my_post' %}">내가 쓴 글/댓글</a>
 
             <h1> 개인 정보 </h1>
         </div>
