--- a/home/templates/home/login.html
+++ b/home/templates/home/login.html
@@ -9,20 +9,20 @@
 
     <h1 style="text-align:right">로그인</h1>
 
-    <form method="post"  action="home" style="text-align:right">
+    <form method="post"  action="{% url 'member:login'%}" style="text-align:right">
         {% csrf_token %}
         <div >ID</div>
         <div>
-            <input type="text" name="id" id="id" placeholder="ID"> <!--해당 Text상자에 기본으로 띄워놓을 문구를 placeholder라고 한다. -->
+            <input type="text" name="user_id" id="user_id" placeholder="ID"> <!--해당 Text상자에 기본으로 띄워놓을 문구를 placeholder라고 한다. -->
 
         </div>
 
         <div >password</div>
         <div >
-            <input type="password" name="pwd" id="pwd" placeholder="비밀번호">
+            <input type="password" name="user_pwd" id="user_pwd" placeholder="비밀번호">
         </div>
 
-        <div >
+        <div>
             <input type="submit" value="로그인"><p></p>
             <a href="">아이디/비밀번호찾기</a><p></p>
             <a href="{% url 'signup:signup'%}">가입하기</a>
