--- a/help/templates/help/showpostdetail.html
+++ b/help/templates/help/showpostdetail.html
@@ -36,8 +36,11 @@
 
             <div style="text-align:right">
                 <input type="button" value="목록" id="listBtn">
-                <input type="button" value="수정" id="updateBtn">
-                <input type="button" value="삭제" id="deleteBtn">
+
+                {% if post_detail.5 == request.session.mem_seq %}
+                    <input type="button" value="수정" id="updateBtn">
+                    <input type="button" value="삭제" id="deleteBtn">
+                {% endif %}
             </div>
         </fieldset>
         {% include "reply.html"%}
