--- a/mypage/templates/mypage/myreply.html
+++ b/mypage/templates/mypage/myreply.html
@@ -23,7 +23,7 @@
                     <table class="table table-striped" style="text-align:center">
                         <thead class="thead-dark">
                             <tr>
-                                    <td>게시판어디</td>
+                                    <td>게시판</td>
                                     <td>글번호</td> <!-- 이름을 누르면 이름의 idx를 담아서 detail로 이동-->
                                     <td>제목</td>
                                     <td>리플내용</td>
