--- a/signup/templates/signup/success.html
+++ b/signup/templates/signup/success.html
@@ -10,7 +10,7 @@
     <div style="width:400px; margin:auto;">
         <h2> 회원 가입 예제 </h2>
         <p style="font-size:20px">
-            {{name}} 님 가입을 축하합니다.
+            {{user_name}} 님 가입을 축하합니다.
         </p>
     </div>
 </div>
