--- a/home/templates/navi.html
+++ b/home/templates/navi.html
@@ -1,4 +1,5 @@
   <div style="text-align:right">
+      {{request.session.univ}}기숙사생 {{request.session.nick}}님 안녕하세요!
       <button id= "logout" onclick="logout();"> logout </button><br>
     <a href="{% url 'home:home'%}" title="홈으로 돌아가기">홈</a>
     <a href="{% url 'mypage:myinfo'%}" title="마이페이지">마이페이지</a>
