--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -3,11 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <title>Chemistrry</title>
-    <h1> 메인 </h1>
+    <style>
 
-    {% include 'navi.html'%}
+        .image-box {
+            width:100%;
+            overflow:hidden;
+            margin:0 auto;
+        }
+
+        .image-thumbnail {
+            width:100%;
+            height:100%;
+            object-fit:cover;
+        }
+    </style>
 </head>
 <body>
+      {% include 'navi.html'%}
 
+       {% load static %}
+
+      <div class="image-box">
+          <img class="image-thumbnail" src="{% static 'assets/imgs/giphy.gif'%}">
+      </div>
 </body>
 </html>
